# cuda-2-point-angular-correlation

./: CMakeLists.txt  LICENSE  README.md
result/: DD.txt  DR.txt  RR.txt  omega.txt  prog.err  prog.out
src/: CMakeLists.txt  anglepair.h  cudaDmy.cuh  filereader.cpp  filereader.h  main.cpp  sim.cu  sim.cuh  sine.cuh
